# baseproject

./: .env.template  .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  gunicorn.conf.py  pyproject.toml
docker/: Dockerfile  Dockerfile.dev
src/: config.py  log.py  main.py
src/api/: __init__.py  middleware.py
src/api/routes/: health.py
src/api/schema/: base.py  default_message.py
src/models/: base.py
src/repositories/: base.py
src/services/: requester.py
tests/: conftest.py
tests/fixtures/: api_client.py
tests/unit/dummy/: test_dummy.py
