[project]
name = "baseproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.14.0",
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.115.5",
    "gunicorn>=23.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.10.1",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "python-json-logger>=2.0.7",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "pytest-dotenv>=0.5.2",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
    "uvicorn>=0.32.1",
    "httpx>=0.27.2",
    "pytest-cov>=6.0.0",
    "flake8-bandit>=4.1.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true
